Basic doc reading and architecture. Created dummy files to upload the new folders

--- a/TFG/MainWindow.xaml
+++ b/TFG/MainWindow.xaml
@@ -3,10 +3,19 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TFG"
+        xmlns:local="clr-namespace:TFG" xmlns:viewmodel="clr-namespace:TFG.ViewModel"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+    <Window.DataContext>
+        <viewmodel:MainWindowViewModel/>
+    </Window.DataContext>
     <Grid>
-
+        <Grid.RowDefinitions>
+            <RowDefinition Height="60"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+        </Grid.RowDefinitions>
+        <Button x:Name="OpenFileDialogButton" Command="{Binding Path=OpenFileDialogCommand}" Content="Open file" HorizontalAlignment="Center" MinWidth="100" Margin="10,10,10,10" Grid.Row="0"/>
+        <!-- TODO: Use rich text box -->
+        <TextBox Margin="20,0,20,20" Text="{Binding FileContent}" Grid.Row="1"/>
     </Grid>
 </Window>
