--- a/TFG/MainWindow.xaml
+++ b/TFG/MainWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TFG" xmlns:viewmodel="clr-namespace:TFG.ViewModel"
+        xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Window.DataContext>
@@ -15,7 +16,6 @@
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
         <Button x:Name="OpenFileDialogButton" Command="{Binding Path=OpenFileDialogCommand}" Content="Open file" HorizontalAlignment="Center" MinWidth="100" Margin="10,10,10,10" Grid.Row="0"/>
-        <!-- TODO: Use rich text box -->
-        <TextBox Margin="20,0,20,20" Text="{Binding FileContent}" Grid.Row="1"/>
+        <xctk:RichTextBox x:Name="DocumentTextBox" Margin="20,0,20,20" Text="{Binding FileContent}" Grid.Row="1"/>
     </Grid>
 </Window>
