--- a/TFG/View/DummyWindow.xaml
+++ b/TFG/View/DummyWindow.xaml
@@ -5,8 +5,75 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TFG.View"
         mc:Ignorable="d"
-        Title="DummyWindow" Height="450" Width="800">
+        Title="AutoMarkup" Height="450" Width="800"
+        Background="#553C83">
+    <Window.Resources>
+        <ControlTemplate x:Key="ButtonTemplate" TargetType="Button">
+            <ControlTemplate.Resources>
+                <Style TargetType="Button">
+                    <Setter Property="TextElement.FontFamily" Value="Arial"/>
+                    <Setter Property="Background" Value="#FE6584"/>
+                    <Setter Property="Cursor" Value="Hand"/>
+                </Style>
+            </ControlTemplate.Resources>
+            <ControlTemplate.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="#FE4C70"/>
+                </Trigger>
+            </ControlTemplate.Triggers>
+            
+            <Border Width="100" Height="25"
+                            CornerRadius="12"
+                            Background="{TemplateBinding Background}">
+                <ContentPresenter VerticalAlignment="Center"
+                                  HorizontalAlignment="Center"/>
+            </Border>
+        </ControlTemplate>
+    </Window.Resources>
     <Grid>
-        
+        <TextBlock Text="Welcome to AutoMarkup" 
+                   Foreground="White"
+                   FontSize="40"
+                   VerticalAlignment="Top"
+                   HorizontalAlignment="Center" Margin="0,58,0,0"
+                   FontStyle="Italic"
+                   FontFamily="Arial"/>
+        <Button x:Name="OpenFileDialogButton" Template="{StaticResource ButtonTemplate}" 
+                Command="{Binding Path=OpenFileDialogCommand}" 
+                Content="Open file" 
+                HorizontalAlignment="Left" Margin="241,225,0,155"
+                Width="108" />
+        <Button x:Name="MarkFileButton" 
+                Command="{Binding Path=MarkFileCommand}" 
+                IsEnabled="{Binding EnabledMarkButton}" 
+                Content="Mark document"  
+                HorizontalAlignment="Left" Margin="448,225,0,155"
+                Width="108">
+
+            <Button.Style>
+                <Style TargetType="Button">
+                    <Setter Property="TextElement.FontFamily" Value="Arial"/>
+                    <Setter Property="Background" Value="#FE6584"/>
+                    <Setter Property="Cursor" Value="Hand"/>
+
+                    <Style.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background" Value="#FE4C70"/>
+                        </Trigger>
+                    </Style.Triggers>
+                </Style>
+            </Button.Style>
+
+            <Button.Template>
+                <ControlTemplate TargetType="Button">
+                    <Border Width="100" Height="25"
+                            CornerRadius="12"
+                            Background="{TemplateBinding Background}">
+                        <ContentPresenter VerticalAlignment="Center"
+                                          HorizontalAlignment="Center"/>
+                    </Border>
+                </ControlTemplate>
+            </Button.Template>
+        </Button>
     </Grid>
 </Window>
